Preparation to release